plugins {
    id 'application'
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

application {
    mainClassName = 'org.me4se.MIDletRunner'
}

dependencies {
    implementation project(':client')
    implementation ('org.swingme:swingme-binding-desktop:4.0.0') {
        exclude group: 'junit', module: 'junit'
    }
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.mockito:mockito-core:5.20.0'
    testImplementation 'com.github.romankh3:image-comparison:4.4.0'
    testImplementation 'org.awaitility:awaitility:4.3.0'
}

jar {
    archiveBaseName.set("shithead-game")
    manifest {
        attributes(
                'Main-Class': project.mainClassName,
                'MIDlet-1': 'desktop ui,,net.yura.shithead.client.ShitHeadClient',
                'versionName': rootProject.ext.versionName,
                'versionCode': rootProject.ext.versionCode,
                'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' ')
        )
    }
}

run {
    args 'net.yura.shithead.client.ShitHeadApplication', '-width', '320', '-height', '560'
    // this does not run the actual jar, so cant see the version info in the manifest
    applicationDefaultJvmArgs = ["-DversionName=$rootProject.ext.versionName", "-DversionCode=$rootProject.ext.versionCode"]
}

test {
    // Allow access to internal package
    jvmArgs += [
            "--add-exports=java.desktop/sun.awt=ALL-UNNAMED"
    ]
}
